--- a/Docker/index.html
+++ b/Docker/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello NGINX!</title>
+    <title>Welcome to CloudBlitz Technologies</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f8f8f8;
+            background-color: #f5f5f5;
             margin: 0;
             padding: 0;
+            color: #333;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
         }
         .container {
             max-width: 1200px;
@@ -17,18 +24,6 @@
             padding: 20px;
             background-color: #fff;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        h1 {
-            margin-bottom: 20px;
-        }
-        p {
-            line-height: 1.5;
         }
         footer {
             background-color: #333;
@@ -40,18 +35,40 @@
             bottom: 0;
             width: 100%;
         }
+        h1 {
+            margin-bottom: 20px;
+            color: #333;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+        li {
+            background-color: #f9f9f9;
+            border-radius: 5px;
+            margin-bottom: 10px;
+            padding: 10px;
+        }
+        li:hover {
+            background-color: #e0e0e0;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Hello NGINX!</h1>
+        <h1>Welcome to CloudBlitz Technologies</h1>
     </header>
     <div class="container">
-        <p>Welcome to our NGINX demo website. This is a modern and advanced example of an HTML page.</p>
-        <p>You can customize this page further to suit your needs.</p>
+        <p>Explore our courses:</p>
+        <ul>
+            <li>Linux Fundamentals</li>
+            <li>Azure DevOps</li>
+        </ul>
     </div>
     <footer>
-        &copy; 2024 My NGINX Website
+        &copy; 2024 CloudBlitz Technologies
     </footer>
 </body>
 </html>
