--- Auto Git Commit By Rajatz ---

--- a/kubernetes/ingress/Doker/homeapp/index.html
+++ b/kubernetes/ingress/Doker/homeapp/index.html
@@ -20,7 +20,7 @@
     </nav>
     <section>
         <h2>About Us</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus volutpat consectetur ex, et consequat risus varius eu.</p>
+        <p>18, Sarvadarshan, Nal-stop karve Road, Shankarrao Kirloskar Marg, opposite Sarswat-co-op Bank, Pune, Maharashtra 41100</p>
     </section>
     <section>
         <h2>Our Services</h2>
