--- Auto Git Commit By Rajatz ---

--- a/kubernetes/ingress/Doker/homeapp/index.html
+++ b/kubernetes/ingress/Doker/homeapp/index.html
@@ -76,7 +76,7 @@
     </nav>
     <section class="container">
         <h2>About Us</h2>
-        <p>tur adipiscing elit. Vivamus volutpat consectetur ex, et consequat risus varius eu.</p>
+        <p>tur adipiscing elit. Vivamus volutpat consectet</p>
     </section>
     <section class="container">
         <h2>Our Services</h2>
