--- Auto Git Commit By Rajatz ---

--- a/kubernetes/ingress/Doker/homeapp/index.html
+++ b/kubernetes/ingress/Doker/homeapp/index.html
@@ -76,7 +76,7 @@
     </nav>
     <section class="container">
         <h2>About Us</h2>
-        <p>tur adipiscing elit. Vivamus volutpat consectet</p>
+        <p>Rajat Zade 18, Sarvadarshan, Nal-stop karve Road, Shankarrao Kirloskar Marg, opposite Sarswat-co-op Bank, Pune, Maharashtra 411004</p>
     </section>
     <section class="container">
         <h2>Our Services</h2>
