--- a/kubernetes/ingress/Doker/homeapp/index.html
+++ b/kubernetes/ingress/Doker/homeapp/index.html
@@ -87,7 +87,7 @@
         </ul>
     </section>
     <footer>
-        <p>&copy; 2024 Home Microservice Company. All rights reserved.</p>
+        <p>&copy; 2024 Home Cloud Company. All rights reserved.</p>
         <p>You've reached the end of the page. Thanks for visiting!</p>
     </footer>
 </body>
