--- Auto Git Commit By Rajatz ---

--- a/kubernetes/ingress/Doker/mobileapp/index.html
+++ b/kubernetes/ingress/Doker/mobileapp/index.html
@@ -91,7 +91,7 @@
     </nav>
     <section class="container">
         <h2>About Our App</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus volutpat consectetur ex, et consequat risus varius eu.</p>
+        <p>Rajat Zade 18, Sarvadarshan, Nal-stop karve Road, Shankarrao Kirloskar Marg, opposite Sarswat-co-op Bank, Pune, Maharashtra 411004</p>
     </section>
     <section class="container">
         <h2>Mobile Screenshots</h2>
