--- Auto Git Commit By Rajatz ---

--- a/kubernetes/ingress/Doker/mobileapp/index.html
+++ b/kubernetes/ingress/Doker/mobileapp/index.html
@@ -104,7 +104,7 @@
         <a href="#" target="_blank"><img src="download_button.png" alt="Download Button"></a>
     </section>
     <footer>
-        <p>&copy; 2024 Mobile App Company. All rights reserved.</p>
+        <p>&copy; 2024 Home Cloudblitz | Powered By Greamio. All rights reserved.</p>
         <p>You've reached the end of the page. Thanks for visiting!</p>
     </footer>
 </body>
